--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.1",
+    "nanoid": "^5.0.5",
     "prettier": "^3.2.4",
     "vite": "^5.0.8",
     "vitest": "^1.2.2"
