--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fabric": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
