--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -42,10 +44,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.0",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.1",
     "nanoid": "^5.0.5",
     "prettier": "^3.2.4",
-    "vite": "^5.0.8",
-    "vitest": "^1.2.2"
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   }
 }
