--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nanoid": "^5.0.5",
     "prettier": "^3.2.4",
     "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
