--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "lint-staged": "lint-staged",
     "prepare": "husky install",
-    "test": "vitest"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "fabric": "^5.3.0",
@@ -33,6 +33,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.4.0",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
